// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writes entry points to disk: content1.js 1`] = `
"(function () {
	'use strict';

	var icon = \\"/assets/image.51f8fe9d.png\\";
	var script = \\"script.js\\";
	console.log(\\"content.ts\\", { icon, script });

})();
"
`;

exports[`writes entry points to disk: content2.js 1`] = `
"(function () {
	'use strict';

	var html = \\"iframe.html\\";
	var font = \\"/assets/font.bb6bc8d6.otf\\";
	console.log(\\"content2.ts\\", { html, font });

})();
"
`;

exports[`writes entry points to disk: iframe.html 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
    <script type=\\"module\\" src=\\"/@vite/client\\"></script>

    <meta charset=\\"UTF-8\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Document</title>
  </head>
  <body>
    IFR
  

</body></html>"
`;

exports[`writes entry points to disk: script.js 1`] = `
"(function () {
	'use strict';

	console.log(\\"main world script\\");

})();
"
`;
